[package]
name = "berkeleydb"
version = "1.0.0"
edition = "2021"

[lib]
name = "bdb"
crate-type = ["rlib", "staticlib"]

[dependencies]
base64 = "0.13.0"
byteorder = "1.4.3"
getset = "0.1.2"
libc = "0.2.132"
log = "0.4.17"
safer-ffi = { version = "0.0.10", features = ["proc_macros"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
simple_logger = { version = "2.3.0", features = ["stderr", "colors"], default-features = false }
stable-eyre = "0.2.2"
typed-builder = "0.10.0"

[dev-dependencies]
lexical-sort = "0.3.1"
