[package]
name = "berkeleydb"
version = "1.0.0"
edition = "2021"

[features]
default = []
jemalloc = ["dep:tikv-jemallocator"]

[dependencies]
tikv-jemallocator = { version = "0.5.4", optional = true }
base64 = "0.13.0"
byteorder = "1.4.3"
clap = { version = "3.2.17", features = ["derive"] }
getset = "0.1.2"
log = "0.4.17"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
simple_logger = { version = "2.3.0", features = ["stderr", "colors"], default-features = false }
stable-eyre = "0.2.2"
typed-builder = "0.10.0"

[[bench]]
name = "parse"
harness = false

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
lexical-sort = "0.3.1"
